[FIX] mail: remove unnecessary gap between fields
before this commit,
there is a big gap between subject and recipients in mail

in this commit,
we fix the problem by decreasing the height of emoji element.
now there is no gap between the subject and recipients.

task - 2291575

closes odoo/odoo#54170

--- a/addons/mail/static/src/scss/emojis.scss
+++ b/addons/mail/static/src/scss/emojis.scss
@@ -15,7 +15,7 @@
 }
 
 .o_mail_emojis_dropdown {
-    height: 25px;
+    height: 0px;
     width: 40px;
     float: right;
     bottom: 33px;
